# AETHERION_OS

./: Aetherion.iso  CMakeLists.txt  Makefile  OrionOS.yaml  README.md  atherion.os.bat  bootloader.asm  build.bat  kernel.c
boot/: bootloader.asm  bootloader64.asm  link.ld
boot/grub/: grub.cfg
drivers/: mouse.c  mouse.h
fs/: fs.c  fs.h
kernel/: ahci.c  ahci.h  ai.c  disk.c  disk.h  ia.c  ia.h  io.c  io.h  kernel.c  kernel.h  keyboard.c  keyboard.h  log.c  log.h  malloc.c  malloc.h  pci.c  pci.h  rtc.c  rtc.h  sata.c  sata.h  string.c  string.h  system.c  system.h  types.h  vga.c  vga.h
